fix: hide aside and breadcrumb pseudo-elements on small screens

--- a/assets/css/_core/_media.scss
+++ b/assets/css/_core/_media.scss
@@ -113,7 +113,9 @@
     width: ROUND(80%, 2px) !important;
   }
   
-  aside {
+  aside,
+  .breadcrumb-container::before,
+  .breadcrumb-container::after {
     display: none !important;
   }
 
